--- a/Ecommerce/client-app/package.json
+++ b/Ecommerce/client-app/package.json
@@ -6,6 +6,10 @@
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "@types/jest": "^27.0.3",
+    "@types/node": "^16.11.11",
+    "@types/react": "^17.0.37",
+    "@types/react-dom": "^17.0.11",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
     "primeflex": "^3.1.0",
@@ -20,6 +24,7 @@
     "react-scripts": "^4.0.3",
     "react-transition-group": "^4.4.2",
     "redux": "^4.1.2",
+    "typescript": "^4.5.2",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
