--- a/Ecommerce/client-app/package.json
+++ b/Ecommerce/client-app/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^17.0.11",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
+    "jsonwebtoken": "^8.5.1",
     "primeflex": "^3.1.0",
     "primeicons": "^5.0.0",
     "primereact": "^7.0.1",
@@ -24,6 +25,8 @@
     "react-scripts": "^4.0.3",
     "react-transition-group": "^4.4.2",
     "redux": "^4.1.2",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.4.1",
     "typescript": "^4.5.2",
     "web-vitals": "^1.1.2"
   },
@@ -50,5 +53,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/jsonwebtoken": "^8.5.6"
   }
 }
