--- a/Ecommerce/client-app/package.json
+++ b/Ecommerce/client-app/package.json
@@ -10,8 +10,10 @@
     "@types/node": "^16.11.11",
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
+    "@types/yup": "^0.29.13",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
+    "formik": "^2.2.9",
     "jsonwebtoken": "^8.5.1",
     "primeflex": "^3.1.0",
     "primeicons": "^5.0.0",
@@ -28,7 +30,8 @@
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
     "typescript": "^4.5.2",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
